--- a/metadata.yaml
+++ b/metadata.yaml
@@ -9,6 +9,9 @@ contributor:
     gutenberg_agent_id: '57328'
     url: http://www.gutenberg.org/2009/agents/57328
     wikipedia: https://fi.wikipedia.org/wiki/Ida_Pekari
+covers:
+- cover_type: generated
+  image_path: cover.png
 creator:
   author:
     agent_name: Dostoyevsky, Fyodor
@@ -29,6 +32,8 @@ creator:
     wikipedia: https://en.wikipedia.org/wiki/Fyodor_Dostoevsky
 description: Translation of second part of Бѣсы (Бесы in post-reform Russian), or
   Bésy.
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/74079#Riivaajat-23
 gutenberg_issued: '2024-07-20'
 gutenberg_type: Text
 identifiers:
